--- a/allcss/home.css
+++ b/allcss/home.css
@@ -181,7 +181,13 @@
   flex-direction: column;
   justify-content: space-between;
   height: auto;
-  animation: scrollUpDown 1s;
+  animation: scrolldown 3s;
+}
+
+@keyframes scrolldown {
+  0% {
+    transform: translatex(10vw);
+  }
 }
 
 .hero-top {
@@ -306,7 +312,8 @@
 .about-card:hover {
   box-shadow: 0 7px 30px -10px rgba(150, 170, 180, 0.5);
   border-radius: 25px;
-  transition: all 300ms ease;
+  transition: all 1s ease;
+  transform: rotateY(360deg);
 }
 
 .about-card-header {
@@ -357,6 +364,12 @@
   flex-direction: column;
   justify-content: center;
   gap: 20px;
+  animation: offerright 4s;
+}
+@keyframes offerright{
+  0%{
+    transform: translateX(10vw);
+  }
 }
 
 .our-offering-subheader {
@@ -403,6 +416,16 @@
 .our-offering-left {
   height: 345px;
   width: 500px;
+  animation: scrollright 3s;
+}
+
+@keyframes scrollright{
+  0%{
+    transform: translateX(-10vw);
+  }
+  50%{
+    transform: rotateY(360deg);
+  }
 }
 
 .offering-img1 {
@@ -441,6 +464,19 @@
 .diversify-header {
   font-size: 50px;
   font-weight: 400;
+  animation: rotate 3s;
+}
+
+@keyframes rotate{
+  0%{
+    transform: rotate( 10deg);
+  }
+  50%{
+    transform: translateY(-50px);
+  }
+  100%{
+    transform: translateY(50px);
+  }
 }
 
 .diversify-content1 {
@@ -551,6 +587,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 20px;
+  animation: offerright 3s;
 }
 
 .ourvictories-subheader {
@@ -583,6 +620,11 @@
   width: 450px;
 }
 
+.ourvictories-left{
+  animation: scrollright 3s;
+}
+
+
 /* our victories ends */
 
 /* offering section starts */
@@ -597,7 +639,16 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  animation: rtl 5s;
 }
+@keyframes rtl {
+  0%{
+    transform: translateX(-10vw);
+  }
+}
+
+
+
 .offering-subheader {
   font-size: 18px;
   color: #e25926;
@@ -676,13 +727,22 @@
   justify-content: center;
   width: 220px;
   height: 300px;
+  animation: flip 3s;
 }
+
+@keyframes flip{
+  0%{
+    transform: rotateY(180deg);
+  }
+}
+
 
 .card1:hover {
   background-color: #e25926;
   color: #303084 !important;
-  transition: all 300ms ease;
-  transform: translateY(-3px);
+  transition: all 1s ease;
+  /* transform: translateY(-3px); */
+  transform: rotateY(360deg);
 }
 
 .card1:hover > .card-foot {
@@ -707,6 +767,16 @@
 .offering-right-bottom {
   display: flex;
   gap: 20px;
+}
+
+.offering-right{
+  animation: offrtl 3s;
+}
+
+@keyframes offrtl{
+  0%{
+    transform: translateX(10vw);
+  }
 }
 
 .offering-right-cards {
