--- a/allcss/ouroffering.css
+++ b/allcss/ouroffering.css
@@ -119,7 +119,7 @@
   text-decoration: none;
 }
 
-.nav-menu li a:hover{
+.nav-menu li a:hover {
   color: #e25926;
   transition: all 300ms ease;
 }
@@ -160,6 +160,71 @@
   color: #ffffff;
 }
 /* hero section ends */
+
+/* our victories starts */
+/* our victories starts */
+.ourvictories {
+  background-color: #f7f7f5;
+}
+
+.ourvictories-insider {
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 0px auto;
+  padding: 5% 0%; 
+  gap: 5%;
+}
+
+.ourvictories-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  animation: victoryright 3s;
+}
+
+@keyframes victoryright {
+  0% {
+    transform: translateX(10vw);
+  }
+}
+
+.ourvictories-subheader {
+  font-size: 15px;
+  font-weight: 800;
+  font-family: "Neris Thin";
+  color: #e25926;
+}
+
+.ourvictories-header {
+  font-size: 50px;
+  font-weight: 600;
+  color: #303084;
+  margin-bottom: 20px;
+}
+
+.ourvictories-btn1 {
+  color: #e25926;
+  border-radius: 50px;
+  border: 2px solid #e25926;
+  padding: 10px 25px;
+  background: transparent;
+  margin-top: 20px;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+#ourvictoriesimg {
+  height: 400px;
+  width: 450px;
+}
+
+.ourvictories-left {
+  animation: scrollright 3s;
+}
+
+/* our victories ends */
 
 /* header section starts */
 .header-left {
