--- a/allcss/contact.css
+++ b/allcss/contact.css
@@ -541,3 +541,16 @@ textarea {
     background-color: #9999ca;
   }
 }
+
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+.show {
+  filter: blur(0);
+  transform: translateX(0);
+  opacity: 1;
+}
