--- a/allcss/moments.css
+++ b/allcss/moments.css
@@ -410,3 +410,24 @@
 }
 
 
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+.show {
+  filter: blur(0);
+  transform: translateX(0);
+  opacity: 1;
+}
+
+
+.momentimg:nth-child(2){
+  transition-delay: 400ms;
+}
+
+.momentimg:nth-child(3){
+  transition-delay: 600ms;
+}
