--- a/allcss/ouroffering.css
+++ b/allcss/ouroffering.css
@@ -172,7 +172,7 @@
   flex-wrap: wrap;
   width: 90%;
   margin: 0px auto;
-  padding: 5% 0%; 
+  padding: 5% 0%;
   gap: 5%;
 }
 
@@ -574,4 +574,25 @@
   .nav-menu ul li:hover {
     background-color: #9999ca;
   }
+}
+
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+.show {
+  filter: blur(0);
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.header-content{
+  transition-delay: 200ms;
+}
+
+.tradex-content{
+  transition-delay: 200ms;
 }
