--- a/allcss/we.css
+++ b/allcss/we.css
@@ -80,6 +80,7 @@
   color: aliceblue;
   position: fixed;
   letter-spacing: 1px;
+  z-index: 1;
 }
 
 .navbar-scrolled {
@@ -89,6 +90,7 @@
   background-color: rgb(22 22 23 / 80%);
   backdrop-filter: blur(20px);
 }
+
 
 .nav-insider {
   height: 80px;
