--- a/allcss/home.css
+++ b/allcss/home.css
@@ -207,11 +207,14 @@ body {
   font-family: Neris Thin;
 }
 
+#hero-right-spacing{
+  width: 59%;
+}
 .hero-text {
   font-size: 2.55rem;
   color: #ffffff;
   font-family: Neris Thin;
-  line-height: 60px;
+  line-height: 62px;
 }
 .hero-strong {
   color: #ffffff;
