--- a/allcss/moments.css
+++ b/allcss/moments.css
@@ -80,6 +80,7 @@
   color: aliceblue;
   position: fixed;
   letter-spacing: 1px;
+  z-index: 1;
 }
 
 .navbar-scrolled {
@@ -218,7 +219,7 @@
 }
 
 #subscribe {
-  height: 80px;
+  height: 50px;
 }
 
 .footer-top-left {
