--- a/allcss/contact.css
+++ b/allcss/contact.css
@@ -80,6 +80,7 @@
   color: aliceblue;
   position: fixed;
   letter-spacing: 1px;
+  z-index: 1;
 }
 
 .navbar-scrolled {
@@ -317,7 +318,7 @@ textarea {
 }
 
 #subscribe {
-  height: 80px;
+  height: 50px;
 }
 
 .footer-top-left {
