--- a/allcss/victories.css
+++ b/allcss/victories.css
@@ -204,6 +204,18 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-top: -16px;
+}
+
+.firstimg1{
+  height: 100px;
+}
+
+.advisorimage{
+  height: 120px;
+}
+.awardimg{
+  height: 120px;
 }
 /* header section ends */
 
@@ -327,7 +339,7 @@
 }
 
 #subscribe {
-  height: 80px;
+  height: 50px;
 }
 
 .footer-top-left {
