--- a/allcss/contact.css
+++ b/allcss/contact.css
@@ -86,7 +86,10 @@
 .navbar-scrolled {
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
-  color: black;
+}
+
+.navbar-scrolled .nav-menu li a {
+  color: #000000;
 }
 
 .nav-insider {
