--- a/allcss/victories.css
+++ b/allcss/victories.css
@@ -87,8 +87,10 @@
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
   color: black;
-  /* background-color: rgb(22 22 23 / 80%);
-  backdrop-filter: blur(20px); */
+}
+
+.navbar-scrolled .nav-menu li a {
+  color: #000000;
 }
 
 .nav-insider {
