--- a/allcss/we.css
+++ b/allcss/we.css
@@ -84,13 +84,14 @@
 }
 
 .navbar-scrolled {
-  /* background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
-  color: black; */
-  background-color: rgb(22 22 23 / 80%);
-  backdrop-filter: blur(20px);
+  color: black; 
 }
 
+.navbar-scrolled .nav-menu li a {
+  color: #000000;
+}
 
 .nav-insider {
   height: 80px;
@@ -166,8 +167,8 @@
 /* about us starts */
 
 .aboutus {
-  /* height: 80vh; */
   padding: 10% 0%;
+  padding-bottom: 3% !important;
   display: flex;
   align-items: center;
   background-color: #f7f7f5;
@@ -249,6 +250,13 @@
 .aboutus-bottom {
   display: flex;
   justify-content: space-around;
+}
+
+.aboutus-final-bottom-text {
+  color: #303084;
+  font-size: 40px;
+  text-align: center;
+  margin-top: 3%;
 }
 
 /* about us ends */
