--- a/allcss/contact.css
+++ b/allcss/contact.css
@@ -559,3 +559,22 @@ textarea {
   transform: translateX(0);
   opacity: 1;
 }
+
+
+/* robot starts  */
+.robotimg {
+  height: 120px;
+  width: 120px;
+  position: absolute;
+  z-index: 999;
+  bottom: 70px;
+  position: fixed;
+  right: 90px;
+}
+
+.robotimg:hover{
+  transform: scale(1.2);
+  transition: all 300ms;
+}
+
+/* robot ends */
