--- a/allcss/ouroffering.css
+++ b/allcss/ouroffering.css
@@ -616,3 +616,21 @@
 .tradex-content {
   transition-delay: 200ms;
 }
+
+/* robot starts  */
+.robotimg {
+  height: 120px;
+  width: 120px;
+  position: absolute;
+  z-index: 999;
+  bottom: 70px;
+  position: fixed;
+  right: 90px;
+}
+
+.robotimg:hover{
+  transform: scale(1.2);
+  transition: all 300ms;
+}
+
+/* robot ends */
