--- a/allcss/we.css
+++ b/allcss/we.css
@@ -676,3 +676,21 @@
 }
 
 /* page load animation ends */
+
+/* robot starts  */
+.robotimg {
+  height: 120px;
+  width: 120px;
+  position: absolute;
+  z-index: 999;
+  bottom: 70px;
+  position: fixed;
+  right: 90px;
+}
+
+.robotimg:hover {
+  transform: scale(1.2);
+  transition: all 300ms;
+}
+
+/* robot ends */
