--- a/allcss/home.css
+++ b/allcss/home.css
@@ -207,7 +207,7 @@ body {
   font-family: Neris Thin;
 }
 
-#hero-right-spacing{
+#hero-right-spacing {
   width: 51%;
 }
 .hero-text {
@@ -271,7 +271,7 @@ body {
     top: 15vh;
   }
   .hero-coloured {
-    font-size: 3.75rem !important;
+    font-size: 2.75rem !important;
   }
   .hero-text {
     font-size: 2.75rem !important;
@@ -331,6 +331,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
 }
 .aboutus-img-main {
   height: 150px;
@@ -696,6 +697,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding-left: 0px;
 }
 
 .offering-list li {
@@ -748,7 +750,6 @@ body {
   display: flex;
   gap: 20px;
 }
-
 
 .offering-right-cards {
   display: flex;
@@ -895,6 +896,9 @@ body {
     gap: 10px;
     justify-content: center;
   }
+  .nav{
+    background-color: rgba(255, 255, 255, 0.5);
+  }
   .nav-btn1 {
     margin-top: 10px;
     display: none;
@@ -908,7 +912,8 @@ body {
     font-size: 18px;
   }
   .hero-text {
-    font-size: 35px;
+    font-size: 1.75rem !important;
+    line-height: 40px;
   }
   .hero-strong {
     font-size: 30px;
@@ -918,15 +923,12 @@ body {
     width: 100% !important;
   }
   .hero-insider {
-    padding-top: 30% 0%;
+    padding: 35% 5% !important;
+    width: 100% !important;
   }
 
   .w-100 {
-    height: 100vh !important;
-    width: auto !important;
-  }
-  .hero-right-content .hero-coloured {
-    font-size: 53px;
+    width: 100% !important;
   }
   .hero {
     padding-top: 37%;
@@ -936,6 +938,11 @@ body {
     gap: 40px;
     margin-bottom: 30px;
   }
+  #hero-img {
+    max-width: 100%;
+    display: none !important;
+  }
+
   .our-offering-header {
     font-size: 30px;
     width: 100% !important;
@@ -972,6 +979,7 @@ body {
   }
   .offering-insider {
     flex-wrap: wrap;
+    padding: 20% 0%;
   }
   .offering-header {
     font-size: 35px;
@@ -999,8 +1007,7 @@ body {
   .footer-top {
     flex-wrap: wrap;
   }
-  /* #email{
-    /* right: -10px; */
+
   #email {
     width: auto;
     right: 0px;
@@ -1037,8 +1044,8 @@ body {
     position: absolute;
     top: 80px;
     gap: 20px;
-    /* background-color: black; */
-    background-color: rgb(22 22 23 / 80%);
+    background-color: rgba(255, 255, 255, 0.5);
+    padding-left: 0rem !important;
     backdrop-filter: blur(20px);
     width: 100%;
     right: 0;
@@ -1052,6 +1059,15 @@ body {
   }
   .nav-menu ul li:hover {
     background-color: #9999ca;
+  }
+
+  #myElement {
+    width: 100% !important;
+  }
+  .robotimg {
+    right: 18px !important;
+    height: 100px !important;
+    width: 100px !important;
   }
 }
 
@@ -1104,7 +1120,7 @@ body {
   right: 90px;
 }
 
-.robotimg:hover{
+.robotimg:hover {
   transform: scale(1.2);
   transition: all 300ms;
 }
