--- a/allcss/victories.css
+++ b/allcss/victories.css
@@ -477,7 +477,7 @@
     width: 100%;
   }
   .header-left-inner {
-    padding: 0% 2%;
+    padding: 10% 2%;
     margin-bottom: 4%;
   }
   .tradex-left-inner {
@@ -542,11 +542,10 @@
     position: absolute;
     top: 80px;
     gap: 20px;
-    /* background-color: black; */
     width: 100%;
     right: 0;
     text-align: center;
-    background-color: rgb(22 22 23 / 80%);
+    background: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(20px);
   }
   .nav-menu ul li {
@@ -557,6 +556,11 @@
   }
   .nav-menu ul li:hover {
     background-color: #9999ca;
+  }
+  .robotimg {
+    right: 18px !important;
+    height: 100px !important;
+    width: 100px !important;
   }
 }
 
