--- a/allcss/we.css
+++ b/allcss/we.css
@@ -257,6 +257,8 @@
   font-size: 40px;
   text-align: center;
   margin-top: 3%;
+  display: flex;
+  justify-content: center;
 }
 
 /* about us ends */
@@ -636,8 +638,7 @@
     position: absolute;
     top: 80px;
     gap: 20px;
-    /* background-color: black; */
-    background-color: rgb(22 22 23 / 80%);
+    background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(20px);
     width: 100%;
     right: 0;
@@ -651,6 +652,11 @@
   }
   .nav-menu ul li:hover {
     background-color: #9999ca;
+  }
+  .robotimg {
+    right: 18px !important;
+    height: 100px !important;
+    width: 100px !important;
   }
 }
 
